# controllers/games.js
@@ -68,30 +68,26 @@ const addGame = async (req, res) => {
     return;
   }
 
-  const game = validateFields(req, res);
-
-  // const game = {
-  //   title: req.body.title,
-  //   developer: req.body.developer,
-  //   publisher: req.body.publisher,
-  //   releaseDate: req.body.releaseDate,
-  //   platform: req.body.platform,
-  // };
+  const game = {
+    title: req.body.title,
+    developer: req.body.developer,
+    publisher: req.body.publisher,
+    releaseDate: req.body.releaseDate,
+    platform: req.body.platform,
+  };
 
   try {
     const response = await mongodb.getCollection("games").insertOne(game);
     if (response.acknowledged) {
-      response.toArray().then((lists) => {
-        res.setHeader("Content-Type", "application/json");
-        res.status(201).json(lists[0]);
-      });
+      res.setHeader("Content-Type", "application/json");
+      res.status(201).json({ id: response.insertedId });
     } else {
       res.status(400).send("Unknown error adding game.");
       return;
     }
   } catch (error) {
     res.status(500);
-    const msg = "An error occurred while getting this game";
+    const msg = "An error occurred while adding this game";
     res.send(msg);
     return;
   }
@@ -115,32 +111,28 @@ const updateGame = async (req, res) => {
 
   const gameId = new ObjectId(req.params.id);
 
-  const game = validateFields(req, res);
-
-  // const game = {
-  //   title: req.body.title,
-  //   developer: req.body.developer,
-  //   publisher: req.body.publisher,
-  //   releaseDate: req.body.releaseDate,
-  //   platform: req.body.platform,
-  // };
+  const game = {
+    title: req.body.title,
+    developer: req.body.developer,
+    publisher: req.body.publisher,
+    releaseDate: req.body.releaseDate,
+    platform: req.body.platform,
+  };
 
   try {
     const response = await mongodb
       .getCollection("games")
       .replaceOne({ _id: gameId }, game);
     if (response.acknowledged) {
-      response.toArray().then((lists) => {
-        res.setHeader("Content-Type", "application/json");
-        res.status(200).json(lists[0]);
-      });
+      res.setHeader("Content-Type", "application/json");
+      res.status(200).json({ id: req.params.id });
     } else {
       res.status(400).send("Unknown error updating game.");
       return;
     }
   } catch (error) {
     res.status(500);
-    const msg = "An error occurred while getting this game";
+    const msg = "An error occurred while updating this game";
     res.send(msg);
     return;
   }
@@ -181,30 +173,3 @@ module.exports = {
   updateGame,
   deleteGame,
 };
-
-function validateFields(req, res) {
-  let game;
-  const validFields = [
-    "title",
-    "developer",
-    "publisher",
-    "releaseDate",
-    "platform",
-  ];
-  const missingFields = validFields.filter(
-    (val) => !Object.keys(req.body).includes(val) || req.body[val] === ""
-  );
-  if (missingFields.length > 0) {
-    res.status(400).send(`Missing field error: ${missingFields}`);
-    return;
-  } else {
-    game = {
-      title: req.body.title,
-      developer: req.body.developer,
-      publisher: req.body.publisher,
-      releaseDate: req.body.releaseDate,
-      platform: req.body.platform,
-    };
-  }
-  return game;
-}
